--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ version = "0.1.0"
 proc-macro = true
 
 [dependencies]
-quote = "1.0.9"
-syn = "1.0.75"
+quote = {version = "1.0.9"}
+syn = {version = "1.0.75"}
 proc_macro_helpers = {path = "../proc_macro_helpers"}
