--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ proc-macro = true
 
 [dependencies]
 quote = {version = "1.0.9"}
-syn = {version = "1.0.75"}
+syn = {version = "=1.0.107"}
 proc_macro_helpers = {path = "../proc_macro_helpers"}
